--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.3",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -31,6 +34,7 @@
     "react-native-element-timer": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-round-flags": "^1.0.4",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
