--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-element-timer": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-mask-text": "^0.7.0",
     "react-native-round-flags": "^1.0.4",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.11.1",
