--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "firebase": "^9.8.3",
     "formik": "^2.2.9",
     "react": "17.0.2",
