--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
@@ -38,14 +39,16 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-text": "^0.7.0",
     "react-native-round-flags": "^1.0.4",
-    "react-native-safe-area-context": "^3.4.1",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "twrnc": "^3.3.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
